// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template Form should disable fields for read-only users 1`] = `
<div>
  <Panel
    className="FormPanel"
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        label="Template Name"
        name="name"
        onChange={[Function]}
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText={null}
        label="Template ID"
        name="id"
        validate={null}
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        label="Subject"
        name="content.subject"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={true}
        domains={
          Array [
            Object {
              "domain": "test.com",
            },
            Object {
              "domain": "verified.com",
            },
          ]
        }
        helpText={null}
        label="From Email"
        name="content.from.email"
        placeholder="example@email.com"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="A friendly from for your recipients."
        label="From Name"
        name="content.from.name"
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="An email address recipients can reply to."
        label="Reply To"
        name="content.reply_to"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText="Not visible to recipients."
        label="Description"
        name="description"
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        label="Track Opens"
        name="options.open_tracking"
        parse={[Function]}
        type="checkbox"
      />
      <Field
        component={[Function]}
        disabled={true}
        label="Track Clicks"
        name="options.click_tracking"
        parse={[Function]}
        type="checkbox"
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={true}
        helpText="Transactional messages are triggered by a user’s actions on the website, like requesting a password reset, signing up, or making a purchase."
        label="Transactional"
        name="options.transactional"
        parse={[Function]}
        type="checkbox"
      />
    </Panel.Section>
  </Panel>
</div>
`;

exports[`Template Form should handle id validating correctly 1`] = `
Array [
  [Function],
  [Function],
]
`;

exports[`Template Form should render 1`] = `
<div>
  <Panel
    className="FormPanel"
  >
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Template Name"
        name="name"
        onChange={[Function]}
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={true}
        helpText={null}
        label="Template ID"
        name="id"
        validate={null}
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Subject"
        name="content.subject"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={false}
        domains={
          Array [
            Object {
              "domain": "test.com",
            },
            Object {
              "domain": "verified.com",
            },
          ]
        }
        helpText={null}
        label="From Email"
        name="content.from.email"
        placeholder="example@email.com"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={false}
        helpText="A friendly from for your recipients."
        label="From Name"
        name="content.from.name"
      />
      <Field
        component={[Function]}
        disabled={false}
        helpText="An email address recipients can reply to."
        label="Reply To"
        name="content.reply_to"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        disabled={false}
        helpText="Not visible to recipients."
        label="Description"
        name="description"
      />
    </Panel.Section>
  </Panel>
  <Panel>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        label="Track Opens"
        name="options.open_tracking"
        parse={[Function]}
        type="checkbox"
      />
      <Field
        component={[Function]}
        disabled={false}
        label="Track Clicks"
        name="options.click_tracking"
        parse={[Function]}
        type="checkbox"
      />
    </Panel.Section>
    <Panel.Section>
      <Field
        component={[Function]}
        disabled={false}
        helpText="Transactional messages are triggered by a user’s actions on the website, like requesting a password reset, signing up, or making a purchase."
        label="Transactional"
        name="options.transactional"
        parse={[Function]}
        type="checkbox"
      />
    </Panel.Section>
  </Panel>
</div>
`;

exports[`Template Form should render subaccount fields if has subaccounts 1`] = `
<Component
  disabled={false}
  newTemplate={false}
/>
`;
